Cleaning of the Assignment

--- a/Week_8,_9_&_10_Decision_tree_Animals_dataset.ipynb
+++ b/Week_8,_9_&_10_Decision_tree_Animals_dataset.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9bFCGZ2OSlZuG+0zDd5+9",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPt0/diWxgnUBTYfmKIfMGo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- Load dataset"
+        "# Week 10 Assignment - Decision tree - Animals dataset"
+      ],
+      "metadata": {
+        "id": "EamEKBSbx8LV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Load dataset"
       ],
       "metadata": {
         "id": "JF7xDovFVQY0"
@@ -68,7 +78,7 @@
           "height": 444
         },
         "id": "65yxa8gKV33N",
-        "outputId": "b652f911-de74-4005-990a-abd6bf0e2b02"
+        "outputId": "5c14f3cd-5736-457d-b823-49821664b3e6"
       },
       "execution_count": 3,
       "outputs": [
@@ -119,7 +129,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-63f84ec7-1141-4ba2-b60b-3c493f64ecb8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ae539c5f-1da5-4602-8caa-e4649d22a32f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -397,7 +407,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63f84ec7-1141-4ba2-b60b-3c493f64ecb8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ae539c5f-1da5-4602-8caa-e4649d22a32f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -449,12 +459,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-63f84ec7-1141-4ba2-b60b-3c493f64ecb8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ae539c5f-1da5-4602-8caa-e4649d22a32f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-63f84ec7-1141-4ba2-b60b-3c493f64ecb8');\n",
+              "        const element = document.querySelector('#df-ae539c5f-1da5-4602-8caa-e4649d22a32f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -474,8 +484,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6f64e142-a1c5-4a97-8ad9-c25948ae942c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6f64e142-a1c5-4a97-8ad9-c25948ae942c')\"\n",
+              "<div id=\"df-b1b5375b-3755-445f-b86b-7fb2da0465a2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b1b5375b-3755-445f-b86b-7fb2da0465a2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -594,14 +604,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6f64e142-a1c5-4a97-8ad9-c25948ae942c button');\n",
+              "        document.querySelector('#df-b1b5375b-3755-445f-b86b-7fb2da0465a2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_1fbb1563-82df-45f0-b6d4-b90d55582db9\">\n",
+              "  <div id=\"id_5c00c7f4-de79-476a-8bdf-4dc39be8253b\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -645,7 +655,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_1fbb1563-82df-45f0-b6d4-b90d55582db9 button.colab-df-generate');\n",
+              "        document.querySelector('#id_5c00c7f4-de79-476a-8bdf-4dc39be8253b button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -680,7 +690,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FCkT96UMV9cC",
-        "outputId": "142e5443-47ac-4edc-8acc-9eb90ff057d8"
+        "outputId": "a78504ac-a12c-4a7e-a274-b7a8974f5887"
       },
       "execution_count": 4,
       "outputs": [
@@ -706,7 +716,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aFZNp_DUV-23",
-        "outputId": "0a782e93-e912-4e76-94fe-1bc746babe6e"
+        "outputId": "09595329-c50f-48ea-af46-d91399bd0591"
       },
       "execution_count": 5,
       "outputs": [
@@ -747,6 +757,7 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
+        "## Data Transformation\n",
         "- all the data is already in binary\n",
         "---\n",
         "- We are now going to use descision trees\n",
@@ -788,7 +799,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OGQZo3BOW6k2",
-        "outputId": "27cd3408-8c24-44c4-d13d-27fb85a7d27c"
+        "outputId": "e0ad7df8-1242-4c71-cb1b-39c15e8415c7"
       },
       "execution_count": 8,
       "outputs": [
@@ -837,7 +848,7 @@
           "height": 444
         },
         "id": "7v4LWH9KXIq3",
-        "outputId": "2a017ceb-0dac-49fc-a0c2-33ab587e1294"
+        "outputId": "f9f037d9-2797-41fd-912d-33d84cbb973b"
       },
       "execution_count": 10,
       "outputs": [
@@ -888,7 +899,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4ce3c690-827c-480a-af7a-9bbfa416adea\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-849eb1f2-284b-4fbc-8fe0-8e96fd3d7941\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1154,7 +1165,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ce3c690-827c-480a-af7a-9bbfa416adea')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-849eb1f2-284b-4fbc-8fe0-8e96fd3d7941')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1206,12 +1217,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4ce3c690-827c-480a-af7a-9bbfa416adea button.colab-df-convert');\n",
+              "        document.querySelector('#df-849eb1f2-284b-4fbc-8fe0-8e96fd3d7941 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4ce3c690-827c-480a-af7a-9bbfa416adea');\n",
+              "        const element = document.querySelector('#df-849eb1f2-284b-4fbc-8fe0-8e96fd3d7941');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1231,8 +1242,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0b0e411a-1da5-4b45-bf5b-63e01fdd8c73\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0b0e411a-1da5-4b45-bf5b-63e01fdd8c73')\"\n",
+              "<div id=\"df-22efaada-9c2b-4a38-9f13-a2925d6b43a5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-22efaada-9c2b-4a38-9f13-a2925d6b43a5')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1351,14 +1362,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0b0e411a-1da5-4b45-bf5b-63e01fdd8c73 button');\n",
+              "        document.querySelector('#df-22efaada-9c2b-4a38-9f13-a2925d6b43a5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_30c8ee92-fb7c-4fb7-a60a-d4d7c728a67d\">\n",
+              "  <div id=\"id_a09fd5ac-9d8f-4ef0-921e-0e89d0f2e207\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1402,7 +1413,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_30c8ee92-fb7c-4fb7-a60a-d4d7c728a67d button.colab-df-generate');\n",
+              "        document.querySelector('#id_a09fd5ac-9d8f-4ef0-921e-0e89d0f2e207 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1431,6 +1442,7 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
+        "## Creation of Descision Tree\n",
         "- Let us make our descision tree"
       ],
       "metadata": {
@@ -1459,7 +1471,7 @@
           "height": 75
         },
         "id": "ZvAJNWL4XWAU",
-        "outputId": "75c424b0-e006-4d5c-badb-a8070587f281"
+        "outputId": "3bd7a9b8-be42-475f-ef09-b9ead8071078"
       },
       "execution_count": 12,
       "outputs": [
@@ -1510,7 +1522,7 @@
           "height": 75
         },
         "id": "r5FYdcFtXgZY",
-        "outputId": "19c2fd65-de7f-401e-d4f3-4b74570ac80f"
+        "outputId": "48299e7e-0c1a-4279-c6af-69dd71245daa"
       },
       "execution_count": 14,
       "outputs": [
@@ -1582,10 +1594,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 192
+          "height": 174
         },
         "id": "YebZJHKDYP51",
-        "outputId": "80fc17cf-b500-423b-8792-518c5b97194d"
+        "outputId": "a18c7af2-bf7c-4ae3-b8ac-74e3579db207"
       },
       "execution_count": 18,
       "outputs": [
@@ -1625,7 +1637,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BTzHaCbHYV-S",
-        "outputId": "6c586ab3-616e-402b-91c6-7a959f1a1896"
+        "outputId": "f6fb7545-b4ef-4d01-9852-c8028ff1efc6"
       },
       "execution_count": 20,
       "outputs": [
@@ -1633,7 +1645,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<pydotplus.graphviz.Dot at 0x7f0425cb25f0>"
+              "<pydotplus.graphviz.Dot at 0x7d2131518d00>"
             ]
           },
           "metadata": {},
@@ -1651,10 +1663,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 482
         },
         "id": "SsrKkq6SYYsM",
-        "outputId": "3e5735ce-269d-4f44-e115-bbf4318172fe"
+        "outputId": "c494e513-4fbf-469e-cbb6-9088018c57e3"
       },
       "execution_count": 21,
       "outputs": [
